# Stinger

./: .gitignore  GETTING_STARTED.md  README.md  SPEC.md  stinger_spec_v1.7.md
firmware/: CMakeLists.txt
firmware/.cache/clangd/index/: board_config.h.413F7414D8BEA324.idx  main.c.ABBB72070318CE93.idx  pin_map.h.846A5084B9F097B8.idx
firmware/main/: main.c  pin_map.h
firmware/stinger/: CMakeLists.txt  DEVELOPMENT_NOTES.md  FIRMWARE_SPEC.md  PROJECT_TRACKER.md  master_pins.json
firmware/stinger/components/audio_mixer/: CMakeLists.txt  audio_mixer.c  audio_mixer.h
firmware/stinger/components/display/: CMakeLists.txt  display.c  display.h  layout.c  layout.h
firmware/stinger/components/es8388/: CMakeLists.txt  es8388.c  es8388.h
firmware/stinger/components/input_handler/: CMakeLists.txt  input_handler.c  input_handler.h
firmware/stinger/components/input_handler/include/: input_handler.h
firmware/stinger/components/sd_manager/: CMakeLists.txt  sd_manager.c  sd_manager.h
firmware/stinger/components/usb_audio/: CMakeLists.txt  CMakeLists.txt.disabled  usb_audio.c  usb_audio.h  usb_descriptors.c
firmware/stinger/main/: CMakeLists.txt  board_config.h  main.c  pin_map.h  stinger_app.c  stinger_app.h
firmware/stinger/tools/: generate_pins.py
hardware/: HARDWARE_SPEC.md  KICAD_DESIGN_NOTES.md
hardware/brain/brain/: brain.kicad_pro  brain.kicad_sch
hardware/plate/plate/: plate.kicad_pro  plate.kicad_sch
